<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_dialog"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_horizontal"
            android:text="@string/profile_updated"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/_18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/profile_updated_successfully"
            android:textColor="@color/colorGrey"
            android:textSize="@dimen/_12sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tvDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/_25dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button_outline"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/green" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>