<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context="com.apkakisan.myapplication.registration.VerifyPhoneNoActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_80dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/enter_authorization_code"
            android:textAlignment="center"
            android:textColor="#171725"
            android:textSize="@dimen/_16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sms_sent"
            android:textAlignment="center"
            android:textColor="#92929D"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/phone_no_entered_by_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="+1 (XXX) XXX-X120"
            android:textAlignment="center"
            android:textColor="#171725"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etOtp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:background="@drawable/shape_edittext_form"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/six_digit_code"
            android:inputType="number"
            android:maxLength="6"
            android:paddingStart="@dimen/_16dp"
            android:paddingEnd="@dimen/_16dp"
            android:textColor="@color/colorTextBlack"
            android:textColorHint="@color/colorGrey"
            android:textSize="@dimen/_16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCountDownTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/_16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvResendOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="end"
            android:onClick="callResendCode"
            android:text="@string/resend_code"
            android:textColor="#46AA42"
            android:textSize="14sp"
            android:visibility="gone"
            tools:ignore="OnClick"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/verify_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:background="@drawable/shape_bg_btn_green"
            android:backgroundTint="#46AA42"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="@dimen/_16sp"
            android:transitionName="button_tran" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_marginBottom="@dimen/_20dp"
            android:background="@drawable/rounded_button_outline"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="#46AA42"
            android:textSize="@dimen/_16sp"
            android:transitionName="button_tran"
            app:backgroundTint="#FFFFFF"
            tools:ignore="OnClick" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>