<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/_30dp"
            android:paddingBottom="@dimen/_30dp">

            <FrameLayout
                android:id="@+id/flPhotoSelector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivPhoto"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:srcCompat="@drawable/logo" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom|end"
                    app:srcCompat="@drawable/logo" />
            </FrameLayout>

            <include
                android:id="@+id/loader"
                layout="@layout/layout_loader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvName"
                style="@style/TextView.FormField.Heading"
                android:text="@string/name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etName"
                style="@style/EditText.FormField"
                android:text="momersaleem" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNameError"
                style="@style/TextView.FormField.Error" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextView.FormField.Heading"
                android:text="@string/phone" />

            <include
                android:id="@+id/layoutPhone"
                layout="@layout/layout_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48dp"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPhoneError"
                style="@style/TextView.FormField.Error" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextView.FormField.Heading"
                android:text="@string/address" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etAddress"
                style="@style/EditText.FormField"
                android:gravity="top"
                android:lines="4"
                android:singleLine="false" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAddressError"
                style="@style/TextView.FormField.Error" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        style="@style/Button.Submit"
        android:text="@string/save"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>