<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context="com.apkakisan.myapplication.registration.SignUpActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_40dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:src="@drawable/nature_image"
            android:transitionName="logo_image" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="@dimen/_16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/register_an_account"
            android:textSize="16sp"
            android:transitionName="logo_desc" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:background="@drawable/shape_edittext_form"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/full_name"
                android:inputType="text"
                android:paddingStart="@dimen/_16dp"
                android:paddingEnd="@dimen/_16dp"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorGrey"
                android:textSize="@dimen/_16sp" />

            <include
                android:id="@+id/layoutPhone"
                layout="@layout/layout_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:layout_marginStart="@dimen/dp0"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginEnd="@dimen/dp0" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPhoneError"
                style="@style/TextView.FormField.Error"
                android:layout_marginStart="@dimen/dp0" />

            <include
                android:id="@+id/layoutConfirmPhone"
                layout="@layout/layout_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:layout_marginStart="@dimen/dp0"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginEnd="@dimen/dp0" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvConfirmPhoneError"
                style="@style/TextView.FormField.Error"
                android:layout_marginStart="@dimen/dp0" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPincode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@drawable/shape_edittext_form"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/pincode"
                android:inputType="number"
                android:maxLength="6"
                android:paddingStart="@dimen/_16dp"
                android:paddingEnd="@dimen/_16dp"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorGrey"
                android:textSize="@dimen/_16sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etLocation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@drawable/shape_edittext_form"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/location"
                android:inputType="text"
                android:paddingStart="@dimen/_16dp"
                android:paddingEnd="@dimen/_16dp"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorGrey"
                android:textSize="@dimen/_16sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#46AA42"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTermsPrivacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/terms_privacy"
                android:textColor="@color/colorTextBlack"
                android:textColorLink="@color/green"
                android:textSize="@dimen/_14sp"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/checkBox"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reg_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:background="@drawable/shape_bg_btn_green"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="@dimen/_16sp"
            android:transitionName="button_tran"
            app:backgroundTint="#46AA42" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reg_login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_marginBottom="@dimen/_20dp"
            android:background="@drawable/rounded_button_outline"
            android:elevation="0dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/already_have_account"
            android:textAllCaps="false"
            android:textColor="#46AA42"
            android:textSize="@dimen/_16sp"
            app:backgroundTint="#FFFFFF" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>